syntax = "proto3";

option csharp_namespace = "NewMission.Protos";

package projectservices;

// The greeting service definition.
service ProjectOptions 
{
	//Project rpc 
	  rpc CreateProject(CreateProjectRequest) returns ( CreateProjectReply);
	  rpc ReadProject( ReadProjectRequest) returns (ReadProjectReply);
	  rpc UpdateProject(UpdateProjectRequest) returns (UpdateProjectReply);
	  rpc DeleteProject(DeleteProjectRequest) returns (DeleteProjectReply);
	  rpc ShowAll(ShowAllRequest) returns (ShowAllReply) ; 
	   
}
//CreateProject 
message CreateProjectRequest 
{

	
	int32 user_id=1;
	string title = 2;
	string description =3;
}
message CreateProjectReply
{
	int32 student_id=1;
	string title = 2;	 
}
message ReadProjectRequest
{
	int32 project_id=1;
	int32 user_id=2;
}
message ReadProjectReply
{
	int32 project_id=1;
	int32 user_id=2;
	string title=3;
	string description=4;
	string create_date=5;
}
message DeleteProjectRequest
{
	int32 project_id =1 ;
	int32 user_id=2; 
}
message DeleteProjectReply
{
	int32 project_id =1 ; 
	string title=2; 
}

message UpdateProjectRequest
{
	int32 project_id =1 ;
	int32 user_id=2;
	string title=3;
	string description=4;
	
}
message UpdateProjectReply 
{
	int32 project_id =1 ;
	int32 user_id=2; 
}

message ShowAllRequest
{
	int32 student_id=1;
}
message ShowAllReply
{
	  
}